--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -22,3 +22,8 @@
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
+
+
+<div>
+	<%= render "reviews/form" %>
+</div>
