--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -23,6 +23,9 @@
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
 
+<h2>Reviews de <%= @product.name %></h2>
+
+<%= render partial: "reviews/review", collection: @reviews  %>
 
 <div>
 	<%= render "reviews/form" %>
