--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,6 +7,7 @@
     <tr>
       <th>Name</th>
       <th>Description</th>
+      <th>Comentarios</th>
       <th>Price</th>
       <th>Stock</th>
       <th colspan="3"></th>
@@ -18,6 +19,7 @@
       <tr>
         <td><%= product.name %></td>
         <td><%= product.description %></td>
+        <td><%= product.reviews.count %></td>
         <td><%= product.price %></td>
         <td><%= product.stock %></td>
         <td><%= link_to 'Show', product %></td>
