--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,6 +5,7 @@
 <table>
   <thead>
     <tr>
+      <th>Imagen</th>
       <th>Name</th>
       <th>Description</th>
       <th>Comentarios</th>
@@ -17,19 +18,19 @@
   <tbody>
     <% @products.each do |product| %>
       <tr>
+      <td><%= image_tag(product.picture, size:"256x256") %></td>
         <td><%= product.name %></td>
         <td><%= product.description %></td>
         <td><%= product.reviews.count %></td>
         <td><%= product.price %></td>
         <td><%= product.stock %></td>
         <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Edit', edit_product_path(product) if can? :update, Product%></td>
+        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } if can? :delete, Product%></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Product', new_product_path %>
+<%= link_to 'New Product', new_product_path if can? :create, Product %>
