--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -11,19 +11,22 @@
       <th>Comentarios</th>
       <th>Price</th>
       <th>Stock</th>
+      <th>Likes</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @products.each do |product| %>
+    <% @products.reverse.each do |product| %>
       <tr>
-      <td><%= image_tag(product.picture, size:"256x256") %></td>
+      <td><%= image_tag(product.picture, size:"256x256")  if product.picture?%></td>
         <td><%= product.name %></td>
         <td><%= product.description %></td>
         <td><%= product.reviews.count %></td>
         <td><%= product.price %></td>
         <td><%= product.stock %></td>
+        <td><%= product.likes.count  %></td>
+        <td><%= link_to 'like', darlike_product_path(product) if can? :darlike, Product %></td>
         <td><%= link_to 'Show', product %></td>
         <td><%= link_to 'Edit', edit_product_path(product) if can? :update, Product%></td>
         <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } if can? :delete, Product%></td>
