--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -24,6 +24,12 @@
   <%= @product.stock %>
 </p>
 
+<p>
+  <strong>Likes:</strong>
+  <%= @product.likes.count %>
+</p>
+
+<%= link_to 'like', darlike_product_path(@product) if can? :darlike, Product %>
 <%= link_to 'Edit', edit_product_path(@product)if can? :update, Product%>
 <%= link_to 'Back', products_path %>
 
