--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -31,6 +31,11 @@
     <%= f.label :picture %><br>
     <%= f.file_field :picture %>
   </div>
+
+  <div class="field">
+    <%= f.label :category %><br>
+    <%= collection_select(:category, Category.all, :id, :name,{},:multiple => false)%><br>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
