--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,6 +6,7 @@
 
     </td>
     <td>
+    
       <h1>Listing Products</h1>
 
       <table>
@@ -14,6 +15,7 @@
             <th>Imagen</th>
             <th>Name</th>
             <th>Description</th>
+            <th>Categorias</th>
             <th>Comentarios</th>
             <th>Price</th>
             <th>Stock</th>
@@ -28,6 +30,7 @@
             <td><%= image_tag(product.picture, size:"256x256")  if product.picture?%></td>
               <td><%= product.name %></td>
               <td><%= product.description %></td>
+              <td><%= product.category  %></td>
               <td><%= product.reviews.count %></td>
               <td><%= product.price %></td>
               <td><%= product.stock %></td>
